feat: :sparkles: Recode and add responsive view for contact us page

--- a/pages/profile.html
+++ b/pages/profile.html
@@ -31,10 +31,10 @@
 
     <!-- Personal info -->
     <div class="containerFondoPerfil">
-        <img src="../assets/images/fondoPerfil.jpg" alt="" class="fondoPerfil">
+        <img src="../assets/images/fondoPerfil.jpg" alt="" class="fondoPerfil img-responsive">
     </div>
     <div class="containerFotoPerfil">
-        <img src="../assets/images/perfil.jpg" alt="">
+        <img src="../assets/images/perfil.jpg" alt="" class="img-responsive">
     </div>
     <div class="containerNickname">
         <h1 class="nickname">
