--- a/pages/registrarUsuario.html
+++ b/pages/registrarUsuario.html
@@ -12,13 +12,35 @@
 </head>
 
 <body>
-	<nav class="navbar sticky-top">
+
+	<nav class="navbar navbar-default navbar-fixed-top" id="top">
 		<div class="container-fluid">
-			<a class="navbar-brand" href="#">
-				<img src="../assets/images/img_registrarUX/Letra G en rojo.png" alt="">
+			<a class="navbar-brand">
+				<img src="../assets/images/Logo.svg" alt="Logo" width="150" height="35"
+					class="d-inline-block align-text-top">
+
 			</a>
-		</div>
+			<!-- Overlay content -->
+			<div id="config-menu" class="config-menu">
+				<!-- elementos de menú de configuración -->
+				<ul>
+					<li><a href="../pages/AboutUs.html">Acerca de nosotros</a></li>
+					<li><a href="#">Términos y condiciones</a></li>
+					<li><a href="../pages/contactanos.html">Contáctanos</a></li>
+					<hr>
+					<li><a href="../pages/registrarUsuario.html">Registrarse</a></li>
+					<li><a href="../pages/login.html">Iniciar sesión</a></li>
+					<!-- editar elementos del menu -->
+				</ul>
+			</div>
+
+			<!-- Use any element to open/show the overlay navigation menu -->
+			<div class="containerprofile">
+				<img src="../assets/images/usuario.png" alt="Perfil" id="profile-img">
+			</div>
+
 	</nav>
+
 
 	<div class="container">
 
@@ -58,20 +80,23 @@
 			</div>
 			<div class="col-12 mb-3">
 				<div class="form-floating">
-					<input type="password" class="form-control" id="input-password-confirm" placeholder="Confirmar contraseña">
+					<input type="password" class="form-control" id="input-password-confirm"
+						placeholder="Confirmar contraseña">
 					<label for="input-password-confirm">Confirmar contraseña</label>
 				</div>
 			</div>
 			<div class="col-12">
 				<div class="form-check">
 					<input type="checkbox" class="form-check-input" id="check-get-support">
-					<label for="check-get-support" class="form-check-label">Deseo recibir apoyo de otros jugadores</label>
+					<label for="check-get-support" class="form-check-label">Deseo recibir apoyo de otros
+						jugadores</label>
 				</div>
 			</div>
 			<div class="col-12">
 				<div class="form-check">
 					<input type="checkbox" class="form-check-input" id="check-give-support">
-					<label for="check-give-support" class="form-check-label">Deseo brindar apoyo de otros jugadores</label>
+					<label for="check-give-support" class="form-check-label">Deseo brindar apoyo de otros
+						jugadores</label>
 				</div>
 			</div>
 			<div class="col-12">
@@ -94,9 +119,45 @@
 
 	</div>
 
+	<footer>
+		<div class="footer-container">
+
+			<div class="row">
+				<div class="col-4">
+					<div class="divider"></div>
+				</div>
+				<div class="col-4 footer-social">
+					<a href="#" class="social-icon"><img src="../assets/images/linkedin.png" alt="LinkedIn"></a>
+					<a href="#" class="social-icon"><img src="../assets/images/github-logo.png" alt="GitHub"></a>
+					<a href="#" class="social-icon"><img src="../assets/images/Discord.svg" alt="Discord"></a>
+					<!-- Agrega más redes sociales si es necesario -->
+				</div>
+				<div class="col-4">
+					<div class="divider"></div>
+				</div>
+			</div>
+
+			<img src="../assets/images/Logo.svg" alt="logo" class="footerlogo">
+
+			<div class="row links">
+				<div class="col-4">
+					<a href="../pages/AboutUs.html">Acerca de nosotros</a>
+				</div>
+				<div class="col-4">
+					<a href="#">Terminos y condiciones</a>
+				</div>
+				<div class="col-4">
+					<a href="../pages/contactanos.html">Contactanos</a>
+				</div>
+			</div>
+		</div>
+	</footer>
+
+
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
 		integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
 		crossorigin="anonymous"></script>
+	<script src="../assets/scripts/scriptsMenuNavbar.js"></script>
 </body>
 
 </html>
