--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>LinkGameIn</title>
+
+    <link rel="icon" href="./assets/images/img_registrarUX/Letra G en rojo.ico">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="./assets/styles/Landing.css">
@@ -26,11 +28,12 @@
             <div id="config-menu" class="config-menu">
                 <!-- elementos de menú de configuración -->
                 <ul>
-                    <li><a href="#">Iniciar Sesion</a></li>
-                    <li><a href="#">Registrarse</a></li>
-                    <hr>
-                    <li><a href="./pages/AboutUs.html">About us</a></li>
+                    <li><a href="./pages/AboutUs.html">Acerca de nosotros</a></li>
                     <li><a href="#">Términos y condiciones</a></li>
+                    <li><a href="./pages/contactanos.html">Contáctanos</a></li>
+                    <hr>
+                    <li><a href="./pages/registrarUsuario.html">Registrarse</a></li>
+                    <li><a href="./pages/login.html">Iniciar sesión</a></li>
                     <!-- editar elementos del menu -->
                 </ul>
             </div>
@@ -69,7 +72,6 @@
             <div class="content-card ">
                 <p>Torneo de nacional de #LOL en #ArenaCDMX
                     #AlphaAtheris #LATAM #Esports</p>
-
                 <img src="./assets/images/publiesports.jpg" alt="" srcset="">
             </div>
             <div class="social-icon"><img src="./assets/images/like.png" alt="">
@@ -144,9 +146,6 @@
             </div>
 
             <img src="./assets/images/Logo.svg" alt="logo" class="footerlogo">
-
-
-
 
             <div class="row links">
                 <div class="col-4">
