--- a/pages/AboutUs.html
+++ b/pages/AboutUs.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+
+    <link rel="icon" href="../assets/images/img_registrarUX/Letra G en rojo.ico">
     <link
         href="https://fonts.googleapis.com/css2?family=Montserrat:wght@200;300;400&family=Poppins:wght@200;400;600&display=swap"
         rel="stylesheet" />
@@ -14,7 +16,7 @@
     <link rel="icon" href="/LinkGameIn/assets/images/Mesa de trabajo 1 copia 8@2x.png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous" />
-    <link rel="stylesheet" href="/LinkGameIn/assets/styles/styleAboutUs.css">
+    <link rel="stylesheet" href="../assets/styles/styleAboutUs.css">
 </head>
 
 
@@ -27,7 +29,7 @@
         </div> <!--cierra primer div de container logo-->
 
         <div class="containerprofile">
-            <img src="/LinkGameIn/assets/images/usuario.png" alt="Perfil" id="profile-img">
+            <img src="../assets/images/usuario.png" alt="Perfil" id="profile-img">
             <div id="config-menu" class="config-menu">
                 <!-- elementos de menú de configuración -->
                 <ul>
@@ -39,11 +41,11 @@
                     <!--    <hr> -->
                     <!--    <li><a href="#">Cuenta y seguridad</a></li> -->
                     <li><a href="#">Acerca de nosotros</a></li>
-                    <li><a href="#">Términos y condiciones</a></li>
-                    <li><a href="#">Contáctanos</a></li>
+                    <li><a href="">Términos y condiciones</a></li>
+                    <li><a href="./contactanos.html">Contáctanos</a></li>
                     <hr>
-                    <li><a href="#">Registrarse</a></li>
-                    <li><a href="#">Iniciar sesión</a></li>
+                    <li><a href="./registrarUsuario.html">Registrarse</a></li>
+                    <li><a href="./login.html">Iniciar sesión</a></li>
                     <!--     <li><a href="#">Cerrar sesión</a></li> -->
                     <!-- editar elementos del menu -->
                 </ul>
@@ -299,7 +301,7 @@
         </div>
     </footer>
 
-    <script src="/LinkGameIn/assets/scripts/scriptsMenuNavbar.js"></script>
+    <script src="../assets/scripts/scriptsMenuNavbar.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
         crossorigin="anonymous"></script>
