--- a/pages/login.html
+++ b/pages/login.html
@@ -1,17 +1,49 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="theme-color" content="#000000">
     <link rel="icon" href="../assets/images/img_registrarUX/Letra G en rojo.ico">
-	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
-		integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="../assets/styles/formulario.css">
     <title>LinkGameIn - Iniciar Sesión</title>
 </head>
+
 <body>
+
+
+    <nav class="navbar navbar-default navbar-fixed-top" id="top">
+        <div class="container-fluid">
+            <a class="navbar-brand">
+                <img src="../assets/images/Logo.svg" alt="Logo" width="150" height="35"
+                    class="d-inline-block align-text-top">
+
+            </a>
+            <!-- Overlay content -->
+            <div id="config-menu" class="config-menu">
+                <!-- elementos de menú de configuración -->
+                <ul>
+                    <li><a href="../pages/AboutUs.html">Acerca de nosotros</a></li>
+                    <li><a href="#">Términos y condiciones</a></li>
+                    <li><a href="../pages/contactanos.html">Contáctanos</a></li>
+                    <hr>
+                    <li><a href="../pages/registrarUsuario.html">Registrarse</a></li>
+                    <li><a href="../pages/login.html">Iniciar sesión</a></li>
+                    <!-- editar elementos del menu -->
+                </ul>
+            </div>
+
+            <!-- Use any element to open/show the overlay navigation menu -->
+            <div class="containerprofile">
+                <img src="../assets/images/usuario.png" alt="Perfil" id="profile-img">
+            </div>
+
+    </nav>
     <div class="background">
+
         <div class="container tarjeta"><!-- Contenedor de la tarjeta -->
             <div class="logo">
                 <img src="../assets/images/img_registrarUX/loginImg.png" alt="Logo">
@@ -38,14 +70,19 @@
                 <p class="sinCuenta">Aún no tengo cuenta</p>
             </div>
             <div class="registro"></div>
-                <a href="./registrarUsuario.html" class="linkRegistro">Regístrate</a>
-            </div>
+            <a href="./registrarUsuario.html" class="linkRegistro">Regístrate</a>
         </div>
+    </div>
     </div>
 
 
+
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
-		integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
-		crossorigin="anonymous"></script>
+        integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+        crossorigin="anonymous"></script>
+
+    <script src="../assets/scripts/scriptsMenuNavbar.js"></script>
 </body>
+
 </html>
