actualizacion de menu desplegable y barra de navegación

--- a/pages/Terminosycondiciones.html
+++ b/pages/Terminosycondiciones.html
@@ -20,13 +20,13 @@
 <body>
 
     <nav class="custom-navbar d-flex justify-content-between">
-        <div class="containerlogo">
-            <a class="navbar-brand" href="/index.html">
-                <img id="logo" class="d-inline-block" src="/assets/images/Logo.svg" alt="LinkGameIn"> </a>
-        </div> <!--cierra primer div de container logo-->
+        <a class="navbar-brand" href="/dashBoard.html">
+            <img src="../assets/images/Logo.svg" alt="logo" class="logo">
+        </a>
 
-        <div class="containerprofile">
-            <img src="/assets/images/usuario.png" alt="Perfil" id="profile-img">
+        <div id="profile-img" class="containerProfile position-relative">
+            <img src="../assets/images/perfil.jpg" alt="" class="border border-dark perfil">
+            <span class="position-absolute bottom-0 start-0 p-2 bg-success border border-dark rounded-circle"></span>
             <div id="config-menu" class="config-menu">
                 <!-- elementos de menú de configuración -->
                 <ul>
