--- a/pages/AboutUs.html
+++ b/pages/AboutUs.html
@@ -23,13 +23,13 @@
 <body>
 
     <nav class="custom-navbar d-flex justify-content-between">
-        <div class="containerlogo">
-            <a class="navbar-brand" href="/index.html">
-                <img id="logo" class="d-inline-block" src="../assets/images/Logo.svg" alt="LinkGameIn"> </a>
-        </div> <!--cierra primer div de container logo-->
+        <a class="navbar-brand" href="/dashBoard.html">
+            <img src="../assets/images/Logo.svg" alt="logo" class="logo">
+        </a>
 
-        <div class="containerprofile">
-            <img src="../assets/images/usuario.png" alt="Perfil" id="profile-img">
+        <div id="profile-img" class="containerProfile position-relative">
+            <img src="../assets/images/perfil.jpg" alt="" class="border border-dark perfil">
+            <span class="position-absolute bottom-0 start-0 p-2 bg-success border border-dark rounded-circle"></span>
             <div id="config-menu" class="config-menu">
                 <!-- elementos de menú de configuración -->
                 <ul>
@@ -40,14 +40,12 @@
                     <!--     <li><a href="#">Logros</a></li> -->
                     <!--    <hr> -->
                     <!--    <li><a href="#">Cuenta y seguridad</a></li> -->
-
-                    <li><a href="#">Acerca de nosotros</a></li>
-                    <li><a href="">Términos y condiciones</a></li>
-                    <li><a href="./contactanos.html">Contáctanos</a></li>
+                    <li><a href="/pages/AboutUs.html">Acerca de nosotros</a></li>
+                    <li><a href="/pages/Terminosycondiciones.html">Términos y condiciones</a></li>
+                    <li><a href="//pages/contactanos.html">Contáctanos</a></li>
                     <hr>
-                    <li><a href="./registrarUsuario.html">Registrarse</a></li>
-
-                    <li><a href="./login.html">Iniciar sesión</a></li>
+                    <li><a href="/pages/registrarUsuario.html">Registrarse</a></li>
+                    <li><a href="/pages/login.html">Iniciar sesión</a></li>
                     <!--     <li><a href="#">Cerrar sesión</a></li> -->
                     <!-- editar elementos del menu -->
                 </ul>
