fix: :iphone: Modify responsive design for form container

--- a/pages/contactanos.html
+++ b/pages/contactanos.html
@@ -18,18 +18,17 @@
 
 <body>
 
+    <!-- Barra de navegación -->
     <nav class="custom-navbar d-flex justify-content-between">
+        <a class="navbar-brand" href="/dashBoard.html">
+            <img src="../assets/images/Logo.svg" alt="logo" class="logo">
+        </a>
 
-        <div class="containerlogo">
-            <a class="navbar-brand" href="#"> </a>
-            <img id="logo" class="d-inline-block" src="../assets/images/Logo(2).svg" alt="LinkGameIn">
-        </div>
-
-        <div class="containerprofile">
-            <img src="../assets/images/WhatsApp Image 2023-09-28 at 6.13.50 PM.jpeg" alt="Perfil">
-        </div>
-    </nav>
-
+        <div id="profile-img" class="containerProfile position-relative">
+            <img src="../assets/images/perfil.jpg" alt="" class="border border-dark perfil">
+            <span class="position-absolute bottom-0 start-0 p-2 bg-success border border-dark rounded-circle"></span>
+        </div> <!--cierra container profile-->
+    </nav> <!--cierre de navbar-->
 
 
     <div class="container">
@@ -110,6 +109,7 @@
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
         crossorigin="anonymous"></script>
 
+    <script src="./assets/scripts/scriptsMenuNavbar.js"></script>
 
 </body>
 
