--- a/pages/profile.html
+++ b/pages/profile.html
@@ -18,19 +18,18 @@
 
     <!-- Barra de navegación -->
     <nav class="custom-navbar d-flex justify-content-between">
-        <!-- Logo o nombre de tu sitio -->
+        <!-- Logo LinkGameIn -->
         <a class="navbar-brand" href="../dashboard.html">
             <img src="../assets/images/Logo.svg" alt="logo" class="logo">
         </a>
-
         <!-- Contenedor para la imagen de perfil pequeña -->
         <div class="containerProfile position-relative">
             <img src="../assets/images/perfil.jpg" alt="" class="border border-dark perfil">
             <span class="position-absolute bottom-0 start-0 p-2 bg-success border border-dark rounded-circle"></span>
         </div>
-
     </nav>
 
+    
     <!-- Personal info -->
     <div class="containerFondoPerfil">
         <img src="../assets/images/fondoPerfil.jpg" alt="" class="fondoPerfil img-responsive">
