--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <!-- Overlay content -->
             <div id="imgs">
                 <div id="containerprofile" class="containerprofile">
-                    <img src="../assets/images/usuario.png" alt="Perfil" id="profile-img">
+                    <img id="imgprof" src="../assets/images/usuario.png" alt="Perfil" id="profile-img">
                     <div id="config-menu" class="config-menu">
 
                     </div> <!--cierra div de menu-->
