--- a/pages/Terminosycondiciones.html
+++ b/pages/Terminosycondiciones.html
@@ -10,7 +10,7 @@
         href="https://fonts.googleapis.com/css2?family=Montserrat:wght@200;300;400&family=Poppins:wght@200;400;600&display=swap"
         rel="stylesheet" />
 
-    <title>Acerca de nosotros</title>
+    <title>Términos y condiciones</title>
     <link rel="icon" href="/assets/images/Mesa de trabajo 1 copia 8@2x.png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous" />
@@ -20,48 +20,138 @@
 <body>
 
     <nav class="custom-navbar d-flex justify-content-between">
-        <a class="navbar-brand" href="/dashBoard.html">
-            <img src="../assets/images/Logo.svg" alt="logo" class="logo">
-        </a>
+        <div id="Logo">
+            <a class="navbar-brand" href="/dashBoard.html">
+                <img src="../assets/images/Logo.svg" alt="logo" class="logo">
+            </a>
+        </div>
 
         <div id="profile-img" class="containerProfile position-relative">
-            <img src="../assets/images/perfil.jpg" alt="" class="border border-dark perfil">
+            <img id="profile-img" src="../assets/images/perfil.jpg" alt="" class="border border-dark perfil">
             <span class="position-absolute bottom-0 start-0 p-2 bg-success border border-dark rounded-circle"></span>
-            <div id="config-menu" class="config-menu">
-                <!-- elementos de menú de configuración -->
-                <ul>
-                    <!--    <li><a href="#">Detalles de Perfil</a></li> -->
-                    <!--    <li><a href="#">Notificaciónes</a></li> -->
-                    <!--     <li><a href="#">Publicaciónes</a></li> -->
-                    <!--     <li><a href="#">Tus juegos</a></li>  -->
-                    <!--     <li><a href="#">Logros</a></li> -->
-                    <!--    <hr> -->
-                    <!--    <li><a href="#">Cuenta y seguridad</a></li> -->
-                    <li><a href="/pages/AboutUs.html">Acerca de nosotros</a></li>
-                    <li><a href="/pages/Terminosycondiciones.html">Términos y condiciones</a></li>
-                    <li><a href="//pages/contactanos.html">Contáctanos</a></li>
-                    <hr>
-                    <li><a href="/pages/registrarUsuario.html">Registrarse</a></li>
-                    <li><a href="/pages/login.html">Iniciar sesión</a></li>
-                    <!--     <li><a href="#">Cerrar sesión</a></li> -->
-                    <!-- editar elementos del menu -->
-                </ul>
-            </div> <!--cierra div de menu-->
         </div> <!--cierra container profile-->
+
+        <div id="config-menu" class="config-menu">
+            <!-- elementos de menú de configuración -->
+            <ul>
+                <!--    <li><a href="#">Detalles de Perfil</a></li> -->
+                <!--    <li><a href="#">Notificaciónes</a></li> -->
+                <!--     <li><a href="#">Publicaciónes</a></li> -->
+                <!--     <li><a href="#">Tus juegos</a></li>  -->
+                <!--     <li><a href="#">Logros</a></li> -->
+                <!--    <hr> -->
+                <!--    <li><a href="#">Cuenta y seguridad</a></li> -->
+                <li><a href="/pages/AboutUs.html">Acerca de nosotros</a></li>
+                <li><a href="/pages/Terminosycondiciones.html">Términos y condiciones</a></li>
+                <li><a href="//pages/contactanos.html">Contáctanos</a></li>
+                <hr>
+                <li><a href="/pages/registrarUsuario.html">Registrarse</a></li>
+                <li><a href="/pages/login.html">Iniciar sesión</a></li>
+                <!--     <li><a href="#">Cerrar sesión</a></li> -->
+                <!-- editar elementos del menu -->
+            </ul>
+        </div> <!--cierra div de menu-->
     </nav> <!--cierre de navbar-->
-
     <br>
 
-    <h1 id="about">Sobre nosotros</h1>
+    <h1 id="about">Términos y condiciones</h1>
     <!--Título de página-->
+
     <br>
+    <div class="container text-center">
+        <div class="row align-items-start">
+            <div class="col">
+                <div class="mb-4">
+                    <p id="inicial" class="px-3 py-2">Estos términos y condiciones de uso rigen tu acceso y uso de la
+                        red social
+                        LinkGameIn, la cual
+                        tiene como finalidad conectar a personas con intereses en común relacionados con los
+                        videojuegos. Al acceder
+                        y utilizar la Plataforma, aceptas cumplir con estos Términos en su totalidad.
+                    </p>
+                </div>
+
+                <div class="mb-4">
+                    <h3>Registro y cuentas de usuario</h3><br>
+                    <p class="px-3 py-2">1.1. Para utilizar la plataforma, debes ser mayor de edad o contar con el
+                        consentimiento de
+                        tus padres o
+                        tutores legales si eres menor de edad.
+                        <br>
+                        1.2. Debes proporcionar información precisa y actualizada durante el proceso de registro. No
+                        debes utilizar
+                        información falsa o engañosa.
+                        <br>
+                        1.3. Eres responsable de mantener la confidencialidad de tu contraseña y de cualquier actividad
+                        que ocurra
+                        en tu cuenta de usuario.
+                    </p>
+                    <br>
+                </div>
 
 
+                <div class="mb-4">
+                    <h3>Uso apropiado de la plataforma</h3><br>
+                    <p class="px-3 py-2">2.1. No debes utilizar la plataforma para fines ilegales o inapropiados. No se
+                        permite el
+                        acoso, la
+                        discriminación, la difamación, ni cualquier forma de conducta abusiva.
+                        <br>
+                        2.2. No debes compartir contenido que infrinja derechos de autor u otros derechos de propiedad
+                        intelectual
+                        sin la debida autorización.
+                        <br>
+                        2.3. No debes realizar actividades que puedan dañar la plataforma, como el uso de software
+                        malicioso o
+                        intentos de hackeo.
+                    </p>
+                    <br>
+                </div>
 
+                <div class="mb-4">
+                    <h3>Contenido generado por los usuarios</h3><br>
+                    <p class="px-3 py-2">3.1. Al compartir contenido en la plataforma, otorgas a la comunidad y a los
+                        administradores de la plataforma
+                        el derecho de visualizar, moderar y distribuir dicho contenido.
+                        <br>
+                        3.2. No compartas información personal sensible, como números de teléfono, direcciones, o datos
+                        financieros,
+                        en la plataforma.
+                    </p>
+                    <br>
+                </div>
 
+                <div class="mb-4">
+                    <h3>Responsabilidad </h3><br>
+                    <p class="px-3 py-2">4.1. La plataforma no es responsable de las interacciones entre los usuarios.
+                        Cada usuario
+                        es responsable de
+                        su conducta y comunicación.
+                        <br>
+                        4.2. La plataforma no garantiza la disponibilidad continua o sin errores del servicio y no se
+                        hace
+                        responsable de cualquier pérdida de datos o interrupción del servicio.
+                    </p><br>
+                </div>
 
+                <div class="mb-4">
+                    <h3>Modificaciones y Terminación</h3><br>
+                    <p class="px-3 py-2">5.1. La plataforma se reserva el derecho de modificar o suspender el servicio
+                        en cualquier
+                        momento sin previo
+                        aviso.
+                        <br>
+                        5.2. La plataforma se reserva el derecho de terminar o suspender tu cuenta en caso de
+                        incumplimiento de
+                        estos términos.
+                    </p><br>
+                </div>
+            </div>
+        </div>
+    </div>
 
-
+    <h5>Para cualquier pregunta o inquietud relacionada con estos términos, puedes contactarnos en LinkGameIn@gmail.com
+    </h5>
 
 
 
