--- a/pages/Terminosycondiciones.html
+++ b/pages/Terminosycondiciones.html
@@ -19,39 +19,20 @@
 
 <body>
 
+    <!-- Barra de navegación -->
     <nav class="custom-navbar d-flex justify-content-between">
+        <!-- Contenedor Logo -->
         <div id="Logo">
             <a class="navbar-brand" href="/dashBoard.html">
                 <img src="../assets/images/Logo.svg" alt="logo" class="logo">
             </a>
-        </div>
-
-        <div id="profile-img" class="containerProfile position-relative">
-            <img id="profile-img" src="../assets/images/perfil.jpg" alt="" class="border border-dark perfil">
-            <span class="position-absolute bottom-0 start-0 p-2 bg-success border border-dark rounded-circle"></span>
-        </div> <!--cierra container profile-->
-
-        <div id="config-menu" class="config-menu">
-            <!-- elementos de menú de configuración -->
-            <ul>
-                <!--    <li><a href="#">Detalles de Perfil</a></li> -->
-                <!--    <li><a href="#">Notificaciónes</a></li> -->
-                <!--     <li><a href="#">Publicaciónes</a></li> -->
-                <!--     <li><a href="#">Tus juegos</a></li>  -->
-                <!--     <li><a href="#">Logros</a></li> -->
-                <!--    <hr> -->
-                <!--    <li><a href="#">Cuenta y seguridad</a></li> -->
-                <li><a href="/pages/AboutUs.html">Acerca de nosotros</a></li>
-                <li><a href="/pages/Terminosycondiciones.html">Términos y condiciones</a></li>
-                <li><a href="//pages/contactanos.html">Contáctanos</a></li>
-                <hr>
-                <li><a href="/pages/registrarUsuario.html">Registrarse</a></li>
-                <li><a href="/pages/login.html">Iniciar sesión</a></li>
-                <!--     <li><a href="#">Cerrar sesión</a></li> -->
-                <!-- editar elementos del menu -->
-            </ul>
-        </div> <!--cierra div de menu-->
-    </nav> <!--cierre de navbar-->
+        </div> <!-- Cierre de contenedor logo -->
+        <!-- Contenedor de Imagen Login/Logout -->
+        <div class="containerProfile position-relative" id="profile-img">
+        </div> <!-- Cierre de contenedor de Imagen Login/Logout -->
+        <div class="config-menu" id="config-menu">
+        </div> <!-- Cierre div de menu -->
+    </nav> <!-- Cierre de Barra de navegación -->
     <br>
 
     <h1 id="about">Términos y condiciones</h1>
@@ -196,7 +177,7 @@
         </div>
     </footer>
 
-    <script src="/assets/scripts/scriptsMenuNavbar.js"></script>
+    <script src="../assets/scripts/scriptsMenuNavbar.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
         crossorigin="anonymous"></script>
