--- a/pages/profile.html
+++ b/pages/profile.html
@@ -18,16 +18,18 @@
 
     <!-- Barra de navegación -->
     <nav class="custom-navbar d-flex justify-content-between">
-        <!-- Logo LinkGameIn -->
-        <a class="navbar-brand" href="../dashboard.html">
-            <img src="../assets/images/Logo.svg" alt="logo" class="logo">
-        </a>
-        <!-- Contenedor para la imagen de perfil pequeña -->
-        <div class="containerProfile position-relative">
-            <img src="../assets/images/perfil.jpg" alt="" class="border border-dark perfil">
-            <span class="position-absolute bottom-0 start-0 p-2 bg-success border border-dark rounded-circle"></span>
-        </div>
-    </nav>
+        <!-- Contenedor Logo -->
+        <div id="Logo">
+            <a class="navbar-brand" href="/dashBoard.html">
+                <img src="../assets/images/Logo.svg" alt="logo" class="logo">
+            </a>
+        </div>  <!-- Cierre de contenedor logo -->
+        <!-- Contenedor de Imagen Login/Logout -->
+        <div class="containerProfile position-relative" id="profile-img" >
+        </div> <!-- Cierre de contenedor de Imagen Login/Logout -->
+        <div class="config-menu" id="config-menu" >
+        </div> <!-- Cierre div de menu -->
+    </nav> <!-- Cierre de Barra de navegación -->
 
     
     <!-- Personal info -->
@@ -174,6 +176,8 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
         crossorigin="anonymous"></script>
+
+    <script src="../assets/scripts/scriptsMenuNavbar.js"></script>
 
 </body>
 
