Diseño y animacion elementos de carrousel

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     <div class="card">
         <div class="card-body d-flex flex-column">
             <div class="containerprofile d-flex"><img src="./assets/images/slphaatheris.jpg" alt="" srcset=""
-                    id="profile-img">
+                    class="profile-img">
                 <div>
                     <h4>Alpha Atheris</h4>
                     <p>LOL Esports</p>
@@ -67,7 +67,7 @@
     <div class="card">
         <div class="card-body d-flex flex-column">
             <div class="containerprofile d-flex"><img src="./assets/images/timbers.png" alt="" srcset=""
-                    id="profile-img">
+                    class="profile-img">
                 <div>
                     <h4>NoSoyTimbers</h4>
                     <p>Fortnite Esports</p>
@@ -87,7 +87,8 @@
     </div>
     <div class="card">
         <div class="card-body d-flex flex-column">
-            <div class="containerprofile d-flex"><img src="./assets/images/elded.jpg" alt="" srcset="" id="profile-img">
+            <div class="containerprofile d-flex"><img src="./assets/images/elded.jpg" alt="" srcset=""
+                    class="profile-img">
                 <div>
                     <h4>NoSoy_elded</h4>
                     <p>Twitch Streamer</p>
