--- a/pages/AboutUs.html
+++ b/pages/AboutUs.html
@@ -46,114 +46,124 @@
 
     <div class="container d-flex justify-content-center align-items-center">
         <div id="cardCarousel" class="carousel" data-bs-ride="carousel" data-bs-interval="6000">
-            <div class="carousel-inner">
+            <div class="carousel-inner" role="listbox">
                 <div class="carousel-item active">
                     <div class="card custom-card">
-                        <div class="row g-0">
-                            <div class="col-md-4">
+                        <div class="face face1">
+                            <div class="content">
                                 <img src="../assets/images/Aaron.png" class="img-fluid rounded-start w-100" alt="Aaron">
-                            </div>
-                            <div class="col-md-8">
-                                <div class="card-body">
-                                    <h5 class="card-title">Aaron Silva</h5>
-                                    <p class="card-text">Creo firmemente que la filosofia de aprendizaje constate es
-                                        esencial para
-                                        mantenerme relevante en mi campo y es fundamental para alcanzar el éxito en
-                                        cualquier
-                                        empresa o proyecto que emprenda.</p>
-                                    <p class="card-text"><small class="text-body-secondary">Redes sociales</small>
-                                    </p>
-                                </div>
+
                             </div>
                         </div>
+                        <div class="face face2">
+                            <div class="content">
+                                <h5 class="card-title">Aaron Silva</h5>
+                                <p class="card-text">Creo firmemente que la filosofia de aprendizaje constate es
+                                    esencial para
+                                    mantenerme relevante en mi campo y es fundamental para alcanzar el éxito en
+                                    cualquier
+                                    empresa o proyecto que emprenda.</p>
+                                <p class="card-text"><small class="text-body-secondary">Redes sociales</small>
+                            </div>
+                        </div>
+
                     </div>
                 </div>
 
                 <div class="carousel-item">
                     <div class="card custom-card">
-                        <div class="row g-0">
-
-                            <div class="col-sm-4 col-md-4">
-
+                        <div class="face face1">
+                            <div class="content">
                                 <img src="../assets/images/ale.png" class="img-fluid rounded-start w-100"
                                     alt="Alejandra">
-                            </div>
-                            <div class="col-md-8">
-                                <div class="card-body">
-                                    <h5 class="card-title">Alejandra Mendieta</h5>
-                                    <p class="card-text">Alto nivel de autonomía, empatía y responsabilidad social.
-                                        Aprendo rápido y
-                                        considero que
-                                        no importa lo que hagas, hazlo siempre bien. Mi principal objetivo es generar
-                                        nuevas
-                                        experiencias y asumir retos que me permitan seguir creciendo.</p>
-                                    <p class="card-text"><small class="text-body-secondary">Redes sociales</small>
-                                    </p>
-                                </div>
+
                             </div>
                         </div>
+                        <div class="face face2">
+                            <div class="content">
+                                <h5 class="card-title">Alejandra Mendieta</h5>
+                                <p class="card-text">Alto nivel de autonomía, empatía y responsabilidad social.
+                                    Aprendo rápido y
+                                    considero que
+                                    no importa lo que hagas, hazlo siempre bien. Mi principal objetivo es generar
+                                    nuevas
+                                    experiencias y asumir retos que me permitan seguir creciendo.</p>
+                                <p class="card-text"><small class="text-body-secondary">Redes sociales</small>
+                                </p>
+                            </div>
+                        </div>
+
+
                     </div>
                 </div>
 
                 <div class="carousel-item">
                     <div class="card custom-card">
-                        <div class="row">
-                            <div class="col-md-4">
+                        <div class="face face1">
+                            <div class="content">
                                 <img src="../assets/images/alan.png" class="img-fluid rounded-start w-100" alt="Alan">
-                            </div>
-                            <div class="col-md-8">
-                                <div class="card-body">
-                                    <h5 class="card-title">Alan Guzmán</h5>
-                                    <p class="card-text">Desarrollador java fullstack, apasionado por el crecimiento
-                                        personal y el
-                                        aprendizaje constante.</p>
-                                    <p class="card-text"><small class="text-body-secondary">Redes sociales</small>
-                                    </p>
-                                </div>
+
                             </div>
                         </div>
+                        <div class="face face2">
+                            <div class="content">
+                                <h5 class="card-title">Alan Guzmán</h5>
+                                <p class="card-text">Desarrollador java fullstack, apasionado por el crecimiento
+                                    personal y el
+                                    aprendizaje constante.</p>
+                                <p class="card-text"><small class="text-body-secondary">Redes sociales</small>
+                                </p>
+                            </div>
+                        </div>
+
                     </div>
                 </div>
 
                 <div class="carousel-item">
                     <div class="card custom-card">
-                        <div class="row">
-                            <div class="col-md-4">
+
+                        <div class="face face1">
+                            <div class="content">
                                 <img src="../assets/images/Della.png" class=" img-fluid rounded-start w-100"
                                     alt="Dellaneyra">
-                            </div>
-                            <div class=" col-md-8">
-                                <div class="card-body">
-                                    <h5 class="card-title">Dellaneyra Vazquez</h5>
-                                    <p class="card-text">Siempre en búsqueda de nuevas oportunidades para adquirir
-                                        conocimientos, desarrollar competencias técnicas y mejorar mis
-                                        habilidades interpersonales.</p>
-                                    <p class="card-text"><small class="text-body-secondary">Redes sociales</small>
-                                    </p>
-                                </div>
+
                             </div>
                         </div>
+                        <div class="face face2">
+                            <div class="content">
+                                <h5 class="card-title">Dellaneyra Vazquez</h5>
+                                <p class="card-text">Siempre en búsqueda de nuevas oportunidades para adquirir
+                                    conocimientos, desarrollar competencias técnicas y mejorar mis
+                                    habilidades interpersonales.</p>
+                                <p class="card-text"><small class="text-body-secondary">Redes sociales</small>
+                                </p>
+                            </div>
+                        </div>
+
                     </div>
                 </div>
 
                 <div class="carousel-item">
                     <div class="card custom-card">
-                        <div class="row">
-                            <div class=" col-md-4">
+
+
+                        <div class="face face1">
+                            <div class="content">
                                 <img src="../assets/images/brandon.png" class="img-fluid rounded-start w-100"
                                     alt="Brandon">
+
                             </div>
-                            <div class=" col-md-8">
-                                <div class="card-body">
-                                    <h5 class="card-title">Brandon Palacios</h5>
-                                    <p class="card-text">Mi pasión por el aprendizaje constante es una de las claves de
-                                        mi éxito y
-                                        me impulsa a buscar constantemente nuevas formas de crecimiento y mejora en
-                                        todas las
-                                        facetas de mi vida.</p>
-                                    <p class="card-text"><small class="text-body-secondary">Redes sociales</small>
-                                    </p>
-                                </div>
+                        </div>
+                        <div class="face face2">
+                            <div class="content">
+                                <h5 class="card-title">Brandon Palacios</h5>
+                                <p class="card-text">Mi pasión por el aprendizaje constante es una de las claves de
+                                    mi éxito y
+                                    me impulsa a buscar constantemente nuevas formas de crecimiento y mejora en
+                                    todas las
+                                    facetas de mi vida.</p>
+                                <p class="card-text"><small class="text-body-secondary">Redes sociales</small>
+                                </p>
                             </div>
                         </div>
                     </div>
@@ -161,18 +171,21 @@
 
                 <div class="carousel-item">
                     <div class="card custom-card">
-                        <div class="row ">
-                            <div class=" col-md-4">
+
+
+                        <div class="face face1">
+                            <div class="content">
                                 <img src="../assets/images/alex.png" class="img-fluid rounded-start w-100"
                                     alt="Alejandro">
+
                             </div>
-                            <div class=" col-md-8">
-                                <div class="card-body">
-                                    <h5 class="card-title">Alejandro Camarillo</h5>
-                                    <p class="card-text">Aún no hay contenido</p>
-                                    <p class="card-text"><small class="text-body-secondary">Redes sociales</small>
-                                    </p>
-                                </div>
+                        </div>
+                        <div class="face face2">
+                            <div class="content">
+                                <h5 class="card-title">Alejandro Camarillo</h5>
+                                <p class="card-text">Aún no hay contenido</p>
+                                <p class="card-text"><small class="text-body-secondary">Redes sociales</small>
+                                </p>
                             </div>
                         </div>
                     </div>
@@ -180,19 +193,24 @@
 
                 <div class="carousel-item">
                     <div class="card custom-card">
-                        <div class="row ">
-                            <div class=" col-md-4">
+
+
+
+                        <div class="face face1">
+                            <div class="content">
                                 <img src="#" class="img-fluid rounded-start w-100" alt="Dylan">
-                            </div>
-                            <div class="col-md-8">
-                                <div class="card-body">
-                                    <h5 class="card-title">Dylan Estarrón</h5>
-                                    <p class="card-text">Aún no hay contenido</p>
-                                    <p class="card-text"><small class="text-body-secondary">Redes sociales</small>
-                                    </p>
-                                </div>
+
                             </div>
                         </div>
+                        <div class="face face2">
+                            <div class="content">
+                                <h5 class="card-title">Dylan Estarrón</h5>
+                                <p class="card-text">Aún no hay contenido</p>
+                                <p class="card-text"><small class="text-body-secondary">Redes sociales</small>
+                                </p>
+                            </div>
+                        </div>
+
                     </div>
                 </div> <!--ultima tarjeta-->
                 <!-- Agrega más tarjetas/o quita mas tarjetas c: -->
@@ -203,7 +221,10 @@
             <a class="carousel-control-next custom-control" href="#cardCarousel" role="button" data-bs-slide="next">
                 <span class="visually-hidden">Next</span>
             </a> <!--cierre controles carrusel-->
+
+
         </div> <!--cierre de carrusel-->
+
     </div><!--cierra container de carrusel que centra las coass-->
 
     <br>
@@ -211,7 +232,7 @@
 
     <div class="container"> <!--Aqui empieza el container-->
 
-        <DIV class="row mb-4"> <!--Aqui empiezan las filas-->
+        <div class="row mb-4"> <!--Aqui empiezan las filas-->
 
             <div class="col-12 col-md-6 col-lg-6"> <!--DIV de imagen-->
                 <img id="mision" src="../assets/images/f.jpeg" class="img-fluid w-100" alt="Misión">
@@ -231,7 +252,7 @@
 
         <br> <br>
 
-        <DIV class="row mb-4"> <!--aqui empieza otra fila-->
+        <div class="row mb-4"> <!--aqui empieza otra fila-->
 
             <div class="col-12 col-md-6 col-lg-6"> <!--comienza DIV de texto-->
                 <h3>Visión</h3> <br>
@@ -294,7 +315,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
         crossorigin="anonymous"></script>
-
+    <script src="../assets/scripts/carousel.js"></script>
 
 </body>
 
