cambios imagen landing

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                     class="game">GAME</span>rs</span> <span class="p3">to success</span></p>
         <div class="textosFBlanco">
 
-            <h2>LinkGameIn</h2>
+            <h2>Link<span class="gameRed">Game</span>In</h2>
             <p>Comparte, juega y contecta. <br>De gamers para gamers. <br>Unete a la comunidad de gamers mas chambeadora
             </p>
         </div>
