Se añaden imagenes para menu, y se estandariza estilo footer/navbar

--- a/pages/AboutUs.html
+++ b/pages/AboutUs.html
@@ -41,15 +41,14 @@
     <h1 id="about">Sobre nosotros</h1>
     <!--Título de página-->
 
-    <div class="container d-flex justify-content-center align-items-center">
-        <div id="cardCarousel" class="carousel" data-bs-ride="carousel" data-bs-interval="6000">
-            <div class="carousel-inner" role="listbox">
+    <div class="container d-flex justify-content-center align-items-center"> <!--Container de carrusel-->
+        <div id="cardCarousel" class="carousel" data-bs-ride="carousel" data-bs-interval="6000"> <!--primer carrusel-->
+            <div class="carousel-inner" role="listbox"> <!--primer item carrusel-->
                 <div class="carousel-item active">
                     <div class="card custom-card">
                         <div class="face face1">
                             <div class="content">
                                 <img src="../assets/images/Aaron.png" class="img-fluid rounded-start w-100" alt="Aaron">
-
                             </div>
                         </div>
                         <div class="face face2">
@@ -63,17 +62,14 @@
                                 <p class="card-text"><small class="text-body-secondary">Redes sociales</small>
                             </div>
                         </div>
-
                     </div>
-                </div>
-
-                <div class="carousel-item">
+                </div> <!--cierre item carrusel-->
+                <div class="carousel-item"> <!--abre nuevo carrusel-->
                     <div class="card custom-card">
                         <div class="face face1">
                             <div class="content">
                                 <img src="../assets/images/ale.png" class="img-fluid rounded-start w-100"
                                     alt="Alejandra">
-
                             </div>
                         </div>
                         <div class="face face2">
@@ -89,17 +85,13 @@
                                 </p>
                             </div>
                         </div>
-
-
                     </div>
-                </div>
-
-                <div class="carousel-item">
+                </div><!--cierre item carrusel-->
+                <div class="carousel-item"> <!--abre nuevo carrusel-->
                     <div class="card custom-card">
                         <div class="face face1">
                             <div class="content">
                                 <img src="../assets/images/alan.png" class="img-fluid rounded-start w-100" alt="Alan">
-
                             </div>
                         </div>
                         <div class="face face2">
@@ -112,18 +104,14 @@
                                 </p>
                             </div>
                         </div>
-
                     </div>
-                </div>
-
-                <div class="carousel-item">
+                </div><!--cierre item carrusel-->
+                <div class="carousel-item"> <!--abre nuevo carrusel-->
                     <div class="card custom-card">
-
                         <div class="face face1">
                             <div class="content">
                                 <img src="../assets/images/Della.png" class=" img-fluid rounded-start w-100"
                                     alt="Dellaneyra">
-
                             </div>
                         </div>
                         <div class="face face2">
@@ -136,19 +124,14 @@
                                 </p>
                             </div>
                         </div>
-
                     </div>
-                </div>
-
-                <div class="carousel-item">
+                </div><!--cierre item carrusel-->
+                <div class="carousel-item"> <!--abre nuevo carrusel-->
                     <div class="card custom-card">
-
-
                         <div class="face face1">
                             <div class="content">
                                 <img src="../assets/images/brandon.png" class="img-fluid rounded-start w-100"
                                     alt="Brandon">
-
                             </div>
                         </div>
                         <div class="face face2">
@@ -164,17 +147,13 @@
                             </div>
                         </div>
                     </div>
-                </div>
-
-                <div class="carousel-item">
+                </div><!--cierre item carrusel-->
+                <div class="carousel-item"> <!--abre nuevo carrusel-->
                     <div class="card custom-card">
-
-
                         <div class="face face1">
                             <div class="content">
                                 <img src="../assets/images/alex.png" class="img-fluid rounded-start w-100"
                                     alt="Alejandro">
-
                             </div>
                         </div>
                         <div class="face face2">
@@ -186,17 +165,12 @@
                             </div>
                         </div>
                     </div>
-                </div>
-
-                <div class="carousel-item">
+                </div><!--cierre item carrusel-->
+                <div class="carousel-item"> <!--abre nuevo carrusel-->
                     <div class="card custom-card">
-
-
-
                         <div class="face face1">
                             <div class="content">
                                 <img src="#" class="img-fluid rounded-start w-100" alt="Dylan">
-
                             </div>
                         </div>
                         <div class="face face2">
@@ -207,7 +181,6 @@
                                 </p>
                             </div>
                         </div>
-
                     </div>
                 </div> <!--ultima tarjeta-->
                 <!-- Agrega más tarjetas/o quita mas tarjetas c: -->
@@ -218,10 +191,7 @@
             <a class="carousel-control-next custom-control" href="#cardCarousel" role="button" data-bs-slide="next">
                 <span class="visually-hidden">Next</span>
             </a> <!--cierre controles carrusel-->
-
-
         </div> <!--cierre de carrusel-->
-
     </div><!--cierra container de carrusel que centra las coass-->
 
     <br>
