Se agrega funcionalidad al logo, si se ingreso usuario direcciona a una pagina distinta a si no se ingreso el usuario

--- a/pages/contactanos.html
+++ b/pages/contactanos.html
@@ -25,8 +25,8 @@
     <!-- Barra de navegación -->
     <nav class="custom-navbar d-flex justify-content-between">
         <!-- Contenedor Logo -->
-        <div id="Logo">
-            <a class="navbar-brand" href="/dashBoard.html">
+        <div id="logo-game">
+           <a class="navbar-brand" > 
                 <img src="../assets/images/Logo.svg" alt="logo" class="logo">
             </a>
         </div>  <!-- Cierre de contenedor logo -->
