--- a/pages/dashBoard.html
+++ b/pages/dashBoard.html
@@ -104,7 +104,8 @@
                                     src="https://d1csarkz8obe9u.cloudfront.net/posterpreviews/gaming-flyer-design-template-d0db241e56497cd3212d9173a27294f8_screen.jpg?ts=1673690008"
                                     class="card-img-top" alt="..."></div>
                             <div class="card-body">
-                                <h5><a href="#"><img src="/assets/images/perfil.jpg" alt="perfil usuario" id="perfil"></a>Nickname Fulanito</h5>
+                                <h5><a href="#"><img src="/assets/images/perfil.jpg" alt="perfil usuario"
+                                            id="perfil"></a>Nickname Fulanito</h5>
                                 <p>Some quick example text to build on the card title and make up the
                                     bulk of the card's content.</p>
                             </div>
@@ -141,7 +142,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
         crossorigin="anonymous"></script>
-    
+
     <!-- Script local -->
     <script src="/assets/scripts/dashBoard.js"></script>
 </body>
