--- a/pages/registrarUsuario.html
+++ b/pages/registrarUsuario.html
@@ -16,15 +16,13 @@
 	<!-- Barra de navegación -->
 	<nav class="custom-navbar d-flex justify-content-between">
 		<!-- Contenedor Logo -->
-		<div id="Logo">
-			<a class="navbar-brand" href="/dashBoard.html">
-				<img src="../assets/images/Logo.svg" alt="logo" class="logo">
-			</a>
+		<div id="containerLogo">
 		</div> <!-- Cierre de contenedor logo -->
 		<!-- Contenedor de Imagen Login/Logout -->
-		<div class="containerProfile position-relative" id="profile-img">
+		<div class="containerProfile position-relative" id="profileImg">
 		</div> <!-- Cierre de contenedor de Imagen Login/Logout -->
-		<div class="config-menu" id="config-menu">
+		<!-- Contenedor Menu Config -->
+		<div class="config-menu" id="configMenu">
 		</div> <!-- Cierre div de menu -->
 	</nav> <!-- Cierre de Barra de navegación -->
 
@@ -64,10 +62,10 @@
 					<input type="text" class="form-control" id="input-nickname" placeholder="Apodo" required>
 					<label for="input-nickname">Apodo</label>
 					<div class="valid-tooltip">
-                        Correcto
-                    </div>
-                    <div class="invalid-tooltip">
-                        Es necesario añadir un apodo
+						Correcto
+					</div>
+					<div class="invalid-tooltip">
+						Es necesario añadir un apodo
 					</div>
 				</div>
 			</div>
@@ -76,10 +74,10 @@
 					<input type="email" class="form-control" id="input-email" placeholder="correo@ejemplo.com" required>
 					<label for="input-email">correo@ejemplo.com</label>
 					<div class="valid-tooltip">
-                        Correcto
-                    </div>
-                    <div class="invalid-tooltip">
-                        Es necesario añadir un correo
+						Correcto
+					</div>
+					<div class="invalid-tooltip">
+						Es necesario añadir un correo
 					</div>
 				</div>
 			</div>
@@ -88,10 +86,10 @@
 					<input type="password" class="form-control" id="input-password" placeholder="Contraseña" required>
 					<label for="input-password">Contraseña</label>
 					<div class="valid-tooltip">
-                        Correcto
-                    </div>
-                    <div class="invalid-tooltip">
-                        Es necesario añadir una contraseña
+						Correcto
+					</div>
+					<div class="invalid-tooltip">
+						Es necesario añadir una contraseña
 					</div>
 				</div>
 			</div>
@@ -101,10 +99,10 @@
 						placeholder="Confirmar contraseña" required>
 					<label for="input-password-confirm">Confirmar contraseña</label>
 					<div class="valid-tooltip">
-                        Correcto
-                    </div>
-                    <div class="invalid-tooltip">
-                        Es necesario confirmar la contraseña
+						Correcto
+					</div>
+					<div class="invalid-tooltip">
+						Es necesario confirmar la contraseña
 					</div>
 				</div>
 			</div>
@@ -126,8 +124,8 @@
 				<div class="form-check">
 					<input type="checkbox" class="form-check-input" id="check-legal-age" required>
 					<label for="check-legal-age" class="form-check-label">Soy mayor de 18 años</label>
-                    <div class="invalid-tooltip">
-                        Es necesario que seas mayor de edad
+					<div class="invalid-tooltip">
+						Es necesario que seas mayor de edad
 					</div>
 				</div>
 			</div>
@@ -135,8 +133,8 @@
 				<div class="form-check">
 					<input type="checkbox" class="form-check-input" id="check-terms-conditions" required>
 					<label for="check-terms-conditions" class="form-check-label">Acepto términos y condiciones</label>
-                    <div class="invalid-tooltip">
-                        Es necesario que aceptes los términos y condiciones
+					<div class="invalid-tooltip">
+						Es necesario que aceptes los términos y condiciones
 					</div>
 				</div>
 			</div>
