fix: :bug: NavBar and Scroll Menu

--- a/pages/profile.html
+++ b/pages/profile.html
@@ -26,7 +26,7 @@
         <!-- Contenedor de Imagen Login/Logout -->
         <div class="containerProfile position-relative" id="profileImg" >
         </div> <!-- Cierre de contenedor de Imagen Login/Logout -->
-        <!-- Contenedor de menu -->
+        <!-- Contenedor Menu Config -->
         <div class="config-menu" id="configMenu">
         </div> <!-- Cierre div de menu -->
     </nav> <!-- Cierre de Barra de navegación -->
