fix: :bug: Bug Personal Info containers

--- a/pages/profile.html
+++ b/pages/profile.html
@@ -33,16 +33,18 @@
 
     
     <!-- Personal info -->
-    <div class="containerFondoPerfil">
-        <img src="../assets/images/fondoPerfil.jpg" alt="" class="fondoPerfil img-responsive">
-    </div>
-    <div class="containerFotoPerfil">
-        <img src="../assets/images/perfil.jpg" alt="" class="img-responsive">
-    </div>
-    <div class="containerNickname">
-        <h1 class="nickname">
-            Nickname
-        </h1>
+    <div class="contSuperior">
+        <div class="contProfileBack">
+            <img src="../assets/images/fondoPerfil.jpg" alt="">
+        </div>
+        <div class="contProfilePick">
+            <img src="../assets/images/perfil.jpg" alt="">
+        </div>
+        <div class="contNickname">
+            <h1>
+                Nickname
+            </h1>
+        </div>
     </div>
 
 
