Añadiendo correciones y actualizaciones

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <div class="textosFBlanco">
 
             <h2>Link<span class="gameRed">Game</span>In</h2>
-            <p>Comparte, juega y contecta. <br>De gamers para gamers. <br>Unete a la comunidad de gamers mas chambeadora
+            <p>Comparte, juega y conecta. <br>De gamers para gamers. <br>Unete a la comunidad de gamers mas chambeadora
             </p>
         </div>
     </div>
