--- a/pages/page404.html
+++ b/pages/page404.html
@@ -42,7 +42,7 @@
         </p> <!--parrfo con 404-->
     </div>
     <div class="conten-description">
-        <p class="error">Pagina no encontrada</p> <br><br>
+        <p class="error">Página no encontrada</p> <br><br>
         <p class="conten-error">
             Verifica el enlace, ya que es posible que esté dañado, o se haya eliminado.
         </p> <!--texto del error-->
