style: :lipstick: Update profile styles

--- a/pages/profile.html
+++ b/pages/profile.html
@@ -56,7 +56,9 @@
 
 
     <div class="row rowFather">
-        <div class="col-xl-6 colLeft"> <!-- Columna izquierda -->
+        <!-- Columna Izquierda -->
+        <div class="col-xl-6 colLeft">
+            <!-- Juegos y Logros -->
             <div class="row containerJuegosLogros">
                 <h2>
                     Juegos y Logros
@@ -124,15 +126,14 @@
                             </div>
                         </li>
                         <li>
-                            <div class="containerJuego">
-                                <a href="../pages/JuegosLogros">
-                                    <img src="../assets/images/ver mas.png" id="verMasJuegos">
-                                </a>
-                            </div>
+                            <a href="../pages/JuegosLogros">
+                                <img src="../assets/images/ver mas.png" id="verMasJuegos">
+                            </a>
                         </li>
                     </ul>
                 </div>
-            </div>
+            </div> <!-- Cierra Juegos y Logros -->
+            <!-- Amigos -->
             <div class="row containerAmigos">
                 <h2>
                     Amigos
@@ -164,10 +165,11 @@
                         </li>
                     </ul>
                 </div>
-            </div>
-        </div>
+            </div> <!-- Cierra Amigos -->
+        </div> <!-- Cierra Columna Izquierda -->
 
-        <div class="col-xl-6 colRight"> <!-- Columna derecha -->
+        <!-- Columna Derecha -->
+        <div class="col-xl-6 colRight">
             <div class="row">
                 <div class="containerMadePubli">
                     <textarea type="text" class="form-control" id="madePubliText" rows="10"
@@ -185,7 +187,7 @@
                     obcaecati?
                 </div>
             </div>
-        </div>
+        </div> <!-- Cierra Columna Derecha -->
 
 
     </div>
