cambios en css, reestructuracion de dashboard/newsfeed

--- a/pages/page404.html
+++ b/pages/page404.html
@@ -44,7 +44,7 @@
     <div class="conten-description">
         <p class="error">Página no encontrada</p> <br><br>
         <p class="conten-error">
-            Verifica el enlace, ya que es posible que esté dañado, o se haya eliminado.
+            Verifica el enlace, <br>ya que es posible que esté dañado, <br>o se haya eliminado.
         </p> <!--texto del error-->
     </div>
 
