--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>LinkGameIn</title>
 
+    <!--Googlefonts-->
+    <link
+        href="https://fonts.googleapis.com/css2?family=Montserrat:wght@200;300;400&family=Poppins:wght@200;400;600&display=swap"
+        rel="stylesheet" />
     <link rel="icon" href="./assets/images/img_registrarUX/Letra G en rojo.ico">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
@@ -29,89 +33,99 @@
     </nav> <!-- Cierre de Barra de navegación -->
 
 
-
-
-    <div class="TextosLanding">
-        <p><span class="p1"><span class="link">LINK</span>ing </span> <span class="p2"> <span
-                    class="game">GAME</span>rs</span> <span class="p3">to success</span></p>
-        <div class="textosFBlanco">
-
-            <h2>Link<span class="gameRed">Game</span>In</h2>
-            <p>Comparte, juega y contecta. <br>De gamers para gamers. <br>Unete a la comunidad de gamers mas chambeadora
-            </p>
-        </div>
-    </div>
-
-    <div class="card">
-        <div class="card-body d-flex flex-column">
-            <div class="containerprofile d-flex"><img src="./assets/images/slphaatheris.jpg" alt="" srcset=""
-                    class="profile-img">
-                <div>
-                    <h4>Alpha Atheris</h4>
-                    <p>LOL Esports</p>
+    <div class="container">
+        <div class="col">
+            <h3 class="gamers">De gamers, para gamers.</h3> <br> <br>
+            <h5 class="subtitle">Comparte, juega y conecta.</h5>
+            <br>
+            <br>
+            <div>
+                <div>¿Ya tienes cuenta con nosotros?, inicia sesión:
+                    <a href="./pages/login.html">Iniciar Sesión</a>
+                </div>
+                <br>
+                <br>
+                <div> Unete a la comunidad de gamers mas chambeadora
+                    <a href="./pages/registrarUsuario.html">Registrarse</a>
                 </div>
             </div>
-            <div class="content-card ">
-                <p>Torneo de nacional de #LOL en #ArenaCDMX
-                    #AlphaAtheris #LATAM #Esports</p>
-                <img src="./assets/images/publiesports.jpg" alt="" srcset="">
-            </div>
-            <div class="social-icon"><img src="./assets/images/like.png" alt="">
-                <img src="./assets/images/comment.png" alt="">
-                <img src="./assets/images/share.svg" alt="">
-            </div>
         </div>
-    </div>
-    <div class="card">
-        <div class="card-body d-flex flex-column">
-            <div class="containerprofile d-flex"><img src="./assets/images/timbers.png" alt="" srcset=""
-                    class="profile-img">
-                <div>
-                    <h4>NoSoyTimbers</h4>
-                    <p>Fortnite Esports</p>
+
+
+        <div class="carousel-container">
+            <div class="carousel">
+                <div class="card">
+                    <div class="card-body d-flex flex-column">
+                        <div class="containerprofile d-flex"><img src="./assets/images/slphaatheris.jpg" alt=""
+                                srcset="" class="profile-img">
+                            <div>
+                                <h4>Alpha Atheris</h4>
+                                <p>LOL Esports</p>
+                            </div>
+                        </div>
+                        <div class="content-card ">
+                            <p>Torneo de nacional de #LOL en #ArenaCDMX
+                                #AlphaAtheris #LATAM #Esports</p>
+                            <img src="./assets/images/publiesports.jpg" alt="" srcset="">
+                        </div>
+                        <div class="social-icon"><img src="./assets/images/like.png" alt="">
+                            <img src="./assets/images/comment.png" alt="">
+                            <img src="./assets/images/share.svg" alt="">
+                        </div>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="card-body d-flex flex-column">
+                        <div class="containerprofile d-flex"><img src="./assets/images/timbers.png" alt="" srcset=""
+                                class="profile-img">
+                            <div>
+                                <h4>NoSoyTimbers</h4>
+                                <p>Fortnite Esports</p>
+                            </div>
+                        </div>
+                        <div class="content-card ">
+                            <p>Demos la bienvenida al team #Timbers a nuestro nuevo compañero @NoSoyJelty
+                                #Fortnite #Esports</p>
+
+                            <img src="./assets/images/Jelty.jpg" alt="" srcset="">
+                        </div>
+                        <div class="social-icon"><img src="./assets/images/like.png" alt="">
+                            <img src="./assets/images/comment.png" alt="">
+                            <img src="./assets/images/share.svg" alt="">
+                        </div>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="card-body d-flex flex-column">
+                        <div class="containerprofile d-flex"><img src="./assets/images/elded.jpg" alt="" srcset=""
+                                class="profile-img">
+                            <div>
+                                <h4>NoSoy_elded</h4>
+                                <p>Twitch Streamer</p>
+                            </div>
+                        </div>
+                        <div class="content-card ">
+                            <p>Me encantó el mix de “Ya llegó @elded”
+                                https://www.youtube.com/watch?v=CR4wT5gvbxE
+                                #IraPues</p>
+
+                            <img src="./assets/images/miselded.jpg" alt="" srcset="">
+                        </div>
+                        <div class="social-icon"><img src="./assets/images/like.png" alt="">
+                            <img src="./assets/images/comment.png" alt="">
+                            <img src="./assets/images/share.svg" alt="">
+                        </div>
+                    </div>
                 </div>
             </div>
-            <div class="content-card ">
-                <p>Demos la bienvenida al team #Timbers a nuestro nuevo compañero @NoSoyJelty
-                    #Fortnite #Esports</p>
-
-                <img src="./assets/images/Jelty.jpg" alt="" srcset="">
-            </div>
-            <div class="social-icon"><img src="./assets/images/like.png" alt="">
-                <img src="./assets/images/comment.png" alt="">
-                <img src="./assets/images/share.svg" alt="">
-            </div>
-        </div>
-    </div>
-    <div class="card">
-        <div class="card-body d-flex flex-column">
-            <div class="containerprofile d-flex"><img src="./assets/images/elded.jpg" alt="" srcset=""
-                    class="profile-img">
-                <div>
-                    <h4>NoSoy_elded</h4>
-                    <p>Twitch Streamer</p>
-                </div>
-            </div>
-            <div class="content-card ">
-                <p>Me encantó el mix de “Ya llegó @elded”
-                    https://www.youtube.com/watch?v=CR4wT5gvbxE
-                    #IraPues</p>
-
-                <img src="./assets/images/miselded.jpg" alt="" srcset="">
-            </div>
-            <div class="social-icon"><img src="./assets/images/like.png" alt="">
-                <img src="./assets/images/comment.png" alt="">
-                <img src="./assets/images/share.svg" alt="">
-            </div>
+            <button class="carousel-button prev">Anterior</button>
+            <button class="carousel-button next">Siguiente</button>
         </div>
     </div>
 
 
 
-
-
-
-
+    <script src="./assets/scripts/landing.js"></script>
     <script src="./assets/scripts/scriptsMenuNavbar.js"></script>
 </body>
 
